# monorepo

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  buf.yaml  gen.sh  interface.yaml  package-lock.json  rustfmt.yml
common/: Cargo.toml
common/src/: keys.rs  kv_codec.rs  lib.rs  prune_policy.rs
examples/simulator/: Cargo.toml
examples/simulator/benches/: ingest.rs  ingest_load.rs  ingest_throughput.rs
examples/simulator/src/: flatfile.rs  kv_backend.rs  lib.rs  main.rs  rocks.rs  runtime_backend.rs  server.rs  store.rs  unordered.rs
examples/simulator/tests/: e2e_connect.rs  e2e_stream.rs  prune_contract.rs  range_scan_contract.rs  runtime_backend_contract.rs
integration/: Cargo.toml
integration/src/: lib.rs
integration/tests/: multi_instance.rs
local/: Cargo.toml  README.md
local/src/: main.rs
local/src/server/: auth.rs  mod.rs
local/src/server/store/: handlers.rs  mod.rs
local/src/server/stream/: handlers.rs  mod.rs
qmdb/: Cargo.toml  README.md  build.rs
qmdb/core/: Cargo.toml
qmdb/core/src/: codec.rs  lib.rs  proof.rs  read_store.rs  stream.rs
qmdb/examples/: qmdb_web_fixture.rs
qmdb/rs/: Cargo.toml  README.md  build.rs
qmdb/rs/src/: auth.rs  boundary.rs  codec.rs  connect.rs  connect_client.rs  core.rs  error.rs  immutable.rs  keyless.rs  lib.rs  ordered.rs  proof.rs  proto.rs  prune.rs  storage.rs  subscription.rs  unordered.rs
qmdb/rs/src/writer/: core.rs  immutable.rs  keyless.rs  mod.rs  ordered.rs  unordered.rs
qmdb/rs/tests/: e2e_immutable.rs  e2e_immutable_connect.rs  e2e_immutable_writer.rs  e2e_keyless.rs  e2e_keyless_connect.rs  e2e_keyless_writer.rs  e2e_mirror_from_local.rs  e2e_ordered.rs  e2e_ordered_connect.rs  e2e_ordered_prune.rs  e2e_ordered_range_connect.rs  e2e_ordered_writer.rs  e2e_unordered.rs  e2e_unordered_connect.rs  e2e_unordered_writer.rs
qmdb/rs/tests/common/: mod.rs
qmdb/rs/wasm/: Cargo.toml
qmdb/rs/wasm/src/: lib.rs  proto.rs
qmdb/src/: auth.rs  boundary.rs  codec.rs  connect.rs  connect_client.rs  core.rs  error.rs  immutable.rs  keyless.rs  lib.rs  ordered.rs  proof.rs  prune.rs  read_store.rs  storage.rs  subscription.rs  unordered.rs
qmdb/src/stream/: driver.rs  mod.rs
qmdb/src/writer/: core.rs  immutable.rs  keyless.rs  mod.rs  ordered.rs  unordered.rs
qmdb/tests/: e2e_immutable.rs  e2e_immutable_connect.rs  e2e_immutable_stream.rs  e2e_immutable_writer.rs  e2e_keyless.rs  e2e_keyless_connect.rs  e2e_keyless_stream.rs  e2e_keyless_writer.rs  e2e_mirror_from_local.rs  e2e_ordered.rs  e2e_ordered_connect.rs  e2e_ordered_prune.rs  e2e_ordered_range_connect.rs  e2e_ordered_stream.rs  e2e_ordered_writer.rs  e2e_unordered.rs  e2e_unordered_connect.rs  e2e_unordered_stream.rs  e2e_unordered_writer.rs
qmdb/tests/common/: mod.rs
qmdb/ts/: README.md  buf.gen.yaml  package-lock.json  package.json
qmdb/ts/src/: client.ts  index.ts
qmdb/wasm/: Cargo.toml
qmdb/wasm/src/: lib.rs
qmdb/web/: Cargo.toml
qmdb/web/src/: generated-wasm.d.ts  index.ts  lib.rs  node.ts  runtime.ts
sdk/: Cargo.toml
sdk-rs/: Cargo.toml  README.md  build.rs
sdk-rs/src/: error.rs  keys.rs  kv_codec.rs  lib.rs  match_key.rs  prune_policy.rs  store.rs  stream.rs  stream_filter.rs
sdk-rs/src/proto/: compression.rs  error_details.rs  mod.rs  prune_policy_proto.rs  query_detail_header.rs
sdk-rs/src/store/: adb.rs  kv.rs  mod.rs
sdk/rs/: Cargo.toml  README.md  build.rs
sdk/rs/src/: keys.rs  kv_codec.rs  lib.rs  match_key.rs  prune_policy.rs  retention.rs  selector.rs  stream_filter.rs
sdk/rs/src/proto/: compression.rs  error_details.rs  mod.rs  prune_policy_proto.rs  range_reduce_response.rs  range_traversal.rs  transport.rs  (+1 more)
sdk/src/: api.rs  error.rs  lib.rs  store.rs  stream.rs  testing.rs
sdk/tests/: e2e.rs
sdk/ts/: README.md  buf.gen.yaml  jest.globalSetup.ts  jest.globalTeardown.ts  package-lock.json  package.json  tsconfig.json
sdk/ts/__tests__/: cookies.test.ts  sdk.test.ts
sdk/ts/src/: client.ts  cookies.ts  index.ts  store.ts
server/: Cargo.toml  README.md
server/src/: connect.rs  engine.rs  in_process.rs  lib.rs  prune.rs  reduce.rs  stream.rs  validate.rs
simplex/: Cargo.toml  README.md
simplex/rs/: Cargo.toml  README.md
simplex/rs/src/: client.rs  error.rs  keys.rs  lib.rs  resolver.rs  types.rs
simplex/rs/tests/: e2e.rs
simplex/rs/wasm/: Cargo.toml
simplex/src/: lib.rs
simplex/ts/: README.md  package-lock.json  package.json  tsconfig.test.json
simplex/ts/src/: client.ts  index.ts  wasm.ts
simplex/ts/test/: client.test.ts
simplex/wasm/: Cargo.toml
simplex/wasm/src/: lib.rs
simulator/: Cargo.toml  README.md
simulator/src/: lib.rs  main.rs  rocks.rs  server.rs  testing.rs
simulator/src/server/: auth.rs  mod.rs
simulator/tests/: adb.rs  e2e.rs  e2e_connect.rs  kv.rs  range_scan_contract.rs  stream.rs
sql/: Cargo.toml  README.md  build.rs
sql/benches/: read_path_perf.rs
sql/examples/: join_kv.rs  orders_kv.rs  types_kv.rs  versioned_kv.rs
sql/rs/: Cargo.toml  README.md  build.rs
sql/rs/benches/: read_path_perf.rs
sql/rs/examples/: join_kv.rs  orders_kv.rs  types_kv.rs  versioned_kv.rs
sql/rs/src/: aggregate.rs  builder.rs  codec.rs  filter.rs  lib.rs  predicate.rs  proto.rs  prune.rs  scan.rs  schema.rs  server.rs  types.rs  writer.rs
sql/rs/tests/: e2e_slam.rs  examples_smoke.rs
sql/src/: aggregate.rs  builder.rs  codec.rs  diagnostics.rs  filter.rs  lib.rs  predicate.rs  prune.rs  scan.rs  schema.rs  server.rs  types.rs  writer.rs
sql/tests/: e2e_slam.rs  examples_smoke.rs
sql/tests/common/: mod.rs
sql/ts/: README.md  buf.gen.yaml  package-lock.json  package.json
sql/ts/src/: client.ts  index.ts
validation/: Cargo.toml  README.md
validation/src/: bench.rs  client.rs  deterministic.rs  exec.rs  ingest.rs  keyspace.rs  lib.rs  load.rs  main.rs  record.rs  report.rs  validate.rs  value.rs  workload.rs
workload/: Cargo.toml  README.md
workload/src/: bench.rs  client.rs  deterministic.rs  ingest.rs  keyspace.rs  ledger.rs  lib.rs  load.rs  main.rs  record.rs  report.rs  validate.rs  value.rs  workload.rs
(+95 files in other folders)
