[workspace]
members = [
    "server",
    "sdk/rs",
    "examples/simulator",
    "qmdb/rs",
    "qmdb/rs/wasm",
    "simplex/rs",
    "simplex/rs/wasm",
    "sql/rs",
    "integration",
]
resolver = "2"

[workspace.package]
version = "2026.5.0"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://exoware.xyz"

[workspace.dependencies]
exoware-qmdb = { version = "2026.5.0", path = "qmdb/rs" }
exoware-sdk = { version = "2026.5.0", path = "sdk/rs" }
exoware-server = { version = "2026.5.0", path = "server" }
exoware-simplex = { version = "2026.5.0", path = "simplex/rs" }
exoware-sql = { version = "2026.5.0", path = "sql/rs" }
tokio = "1.43.0"
clap = "4.5.18"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
thiserror = "2.0.12"
axum = "0.8.1"
base64 = "0.22.1"
hex = "0.4"
regex = "1"
commonware-codec = "2026.7.0"
commonware-actor = "2026.7.0"
commonware-consensus = "2026.7.0"
commonware-cryptography = "2026.7.0"
commonware-glue = "2026.7.0"
commonware-math = "2026.7.0"
commonware-parallel = "2026.7.0"
commonware-p2p = "2026.7.0"
commonware-resolver = "2026.7.0"
commonware-runtime = "2026.7.0"
commonware-storage = "2026.7.0"
commonware-utils = "2026.7.0"
rocksdb = "0.24.0"
mimalloc = "0.1.52"
rand = "0.10.2"
parking_lot = "0.12.5"
bincode = "1.3.3"
dashmap = "5.5.3"
tokio-stream = "0.1.15"
futures = "0.3.30"
reqwest = "0.13.4"
serde = "1.0.219"
serde_with = { version = "3.14.0" }
tempfile = "3.10.1"
portpicker = "0.1.1"
http = "1.3.1"
tower-http = { version = "0.5.2", features = ["cors"] }
bytes = "1"
connectrpc = { version = "0.6.0", features = ["client", "axum"] }
hyper = { version = "1", features = ["full"] }
buffa = { version = "0.6", features = ["json"] }
buffa-types = { version = "0.6", features = ["json"] }
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }
anyhow = "1"
async-trait = "0.1"
criterion = { version = "0.5", features = ["html_reports"] }

[profile.bench]
overflow-checks = true

[profile.dev]
overflow-checks = true

[profile.release]
overflow-checks = true

[profile.release-with-debug]
inherits = "release"
debug = true

[profile.test]
overflow-checks = true
