[package]
name = "exoware-common"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Shared key layout and KV row codec types for the Exoware store API"

[dependencies]
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
rkyv = { version = "0.8", features = [
    "bytecheck",
    "unaligned",
    "pointer_width_64",
    "bytes-1",
] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
thiserror = "2"
anyhow = "1"
