[package]
name = "exoware-integration"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
description = "Unpublished cross-crate integration tests for Exoware."

[dependencies]
axum = { workspace = true }
buffa = { workspace = true }
bytes = { workspace = true }
commonware-cryptography = { git = "https://github.com/commonwarexyz/monorepo", rev = "980c293c9ede99e60e02a8c538a26f7ee0783d20" }
commonware-storage = { git = "https://github.com/commonwarexyz/monorepo", rev = "980c293c9ede99e60e02a8c538a26f7ee0783d20" }
connectrpc = { workspace = true }
datafusion = "52.2.0"
exoware-qmdb = { workspace = true }
exoware-sdk = { workspace = true }
exoware-simulator = { path = "../examples/simulator" }
exoware-sql = { path = "../sql" }
futures = { workspace = true }
reqwest = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["full"] }
