[package]
name = "exoware-local"
version = "0.0.1"
edition = "2021"
publish = true
license = "MIT OR Apache-2.0"
description = "TBA"
readme = "README.md"
homepage = "https://exoware.xyz"
repository = "https://github.com/exowarexyz/monorepo/tree/main/local"
documentation = "https://docs.rs/exoware-local"

[dependencies]
tokio = { workspace = true, features = ["full"] }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }

[[bin]]
name = "local"
path = "src/main.rs"