[package]
name = "exoware-qmdb"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "QMDB instance backed by the Exoware API."
readme = "README.md"
homepage.workspace = true
repository = "https://github.com/exowarexyz/monorepo/tree/main/qmdb"
documentation = "https://docs.rs/exoware-qmdb"

[features]
test-utils = []

[dependencies]
axum = { workspace = true }
bytes = { workspace = true }
buffa = { workspace = true }
clap = { workspace = true, features = ["derive"] }
commonware-codec = { git = "https://github.com/commonwarexyz/monorepo", rev = "980c293c9ede99e60e02a8c538a26f7ee0783d20" }
commonware-parallel = { git = "https://github.com/commonwarexyz/monorepo", rev = "980c293c9ede99e60e02a8c538a26f7ee0783d20" }
commonware-runtime = { git = "https://github.com/commonwarexyz/monorepo", rev = "980c293c9ede99e60e02a8c538a26f7ee0783d20" }
futures = { workspace = true }
commonware-cryptography = { git = "https://github.com/commonwarexyz/monorepo", rev = "980c293c9ede99e60e02a8c538a26f7ee0783d20" }
commonware-storage = { git = "https://github.com/commonwarexyz/monorepo", rev = "980c293c9ede99e60e02a8c538a26f7ee0783d20" }
commonware-utils = { git = "https://github.com/commonwarexyz/monorepo", rev = "980c293c9ede99e60e02a8c538a26f7ee0783d20" }
connectrpc = { workspace = true }
exoware-sdk = { workspace = true }
hex = { workspace = true }
http-body = "1"
regex = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tower-http = { workspace = true, features = ["cors"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
exoware-qmdb = { path = ".", features = ["test-utils"] }
axum = { workspace = true }
bytes = { workspace = true }
commonware-runtime = { git = "https://github.com/commonwarexyz/monorepo", rev = "980c293c9ede99e60e02a8c538a26f7ee0783d20" }
exoware-simulator = { path = "../examples/simulator" }
exoware-server = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
