[package]
name = "exoware-sdk-rs"
version = "0.0.2"
edition = "2021"
publish = true
license = "MIT OR Apache-2.0"
description = "Rust SDK for the Exoware API."
readme = "README.md"
homepage = "https://exoware.xyz"
repository = "https://github.com/exowarexyz/monorepo/tree/main/sdk-rs"
documentation = "https://docs.rs/exoware-sdk-rs"

[dependencies]
commonware-cryptography = { workspace = true }
commonware-storage = { workspace = true }
commonware-codec = { workspace = true }
base64 = { workspace = true }
futures-util = { workspace = true }
http = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_with = { workspace = true, features = ["base64"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-tungstenite = { workspace = true, features = ["native-tls"] }
url = { workspace = true }
