[package]
name = "exoware-sdk-rs"
version = "0.0.2"
edition = "2021"
publish = true
license = "MIT OR Apache-2.0"
description = "Rust SDK for the Exoware store API."
readme = "README.md"
homepage = "https://exoware.xyz"
repository = "https://github.com/exowarexyz/monorepo/tree/main/sdk-rs"
documentation = "https://docs.rs/exoware-sdk-rs"

[dependencies]
anyhow = { workspace = true }
bytes = { workspace = true }
base64 = { workspace = true }
buffa = { workspace = true }
buffa-types = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
connectrpc = { workspace = true }
futures = { workspace = true }
http = { workspace = true }
http-body = "1"
hyper = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
commonware-codec = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tower = { workspace = true }

[build-dependencies]
connectrpc-build = "0.3.1"

[dev-dependencies]
hex = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
