[package]
name = "exoware-sdk"
version.workspace = true
edition.workspace = true
publish = true
license.workspace = true
description = "Interact with the Exoware API in Rust."
readme = "README.md"
homepage.workspace = true
repository = "https://github.com/exowarexyz/monorepo/tree/main/sdk-rs"
documentation = "https://docs.rs/exoware-sdk"

[dependencies]
anyhow = { workspace = true }
bytes = { workspace = true }
base64 = { workspace = true }
buffa = { workspace = true }
buffa-types = { workspace = true }
chrono = "0.4"
connectrpc = { workspace = true }
futures = { workspace = true }
http = { workspace = true }
http-body = "1"
hyper = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
commonware-codec = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tower = { workspace = true }

[build-dependencies]
connectrpc-build = "0.3.1"

[dev-dependencies]
hex = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
