[package]
name = "exoware-sdk"
version = "0.0.1"
edition = "2021"
publish = true
license = "MIT OR Apache-2.0"
description = "TBA"
readme = "README.md"
homepage = "https://exoware.xyz"
repository = "https://github.com/exowarexyz/monorepo/tree/main/sdk"
documentation = "https://docs.rs/exoware-sdk"

[dependencies]
tokio = { workspace = true, features = ["full"] }
thiserror = { workspace = true }
serde = { workspace = true }
base64 = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
tokio-tungstenite = { workspace = true, features = ["native-tls"] }
futures-util = { workspace = true }
async-trait = { workspace = true }
serde_json = { workspace = true }
http = "1"
url = { workspace = true }

[dev-dependencies]
exoware-local = { workspace = true }
portpicker = "0.1.1"
tempfile = "3.10.1"
rand = "0.8.5"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"