[package]
name = "exoware-server"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
description = "Store API server. Implement `StoreEngine` to plug in storage."
readme = "README.md"
repository = "https://github.com/exowarexyz/monorepo/tree/main/server"
documentation = "https://docs.rs/exoware-server"

[dependencies]
bytes = { workspace = true }
buffa = { workspace = true }
buffa-types = { workspace = true }
connectrpc = { workspace = true }
futures = { workspace = true }
http = { workspace = true }
regex = { workspace = true }
exoware-sdk-rs = { workspace = true }

[dev-dependencies]
commonware-codec = { workspace = true }
