[package]
name = "exoware-simulator"
version = "0.0.1"
edition = "2021"
publish = true
license = "MIT OR Apache-2.0"
description = "Simulate the Exoware API."
readme = "README.md"
homepage = "https://exoware.xyz"
repository = "https://github.com/exowarexyz/monorepo/tree/main/simulator"
documentation = "https://docs.rs/exoware-simulator"

[dependencies]
exoware-sdk = { workspace = true }
tokio = { workspace = true, features = ["full"] }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
axum = { workspace = true, features = ["ws"] }
serde = { workspace = true, features = ["derive"] }
base64 = { workspace = true }
rocksdb = { workspace = true }
rand = { workspace = true }
bincode = { workspace = true }
dashmap = { workspace = true }
tokio-stream = { workspace = true, features = ["sync"] }
futures = { workspace = true }
tempfile = { workspace = true }
portpicker = { workspace = true }
futures-util = { workspace = true }
tower-http = { workspace = true, features = ["cors", "limit"] }
url = { workspace = true }

[[bin]]
name = "simulator"
path = "src/main.rs"