[package]
name = "exoware-simulator"
version = "0.0.2"
edition = "2021"
publish = true
license = "MIT OR Apache-2.0"
description = "RocksDB-backed simulator for the store API."
readme = "README.md"
homepage = "https://exoware.xyz"
repository = "https://github.com/exowarexyz/monorepo/tree/main/simulator"
documentation = "https://docs.rs/exoware-simulator"

[dependencies]
axum = { workspace = true }
bytes = { workspace = true }
exoware-server = { workspace = true }
reqwest = { workspace = true }
rocksdb = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }

[dev-dependencies]
exoware-sdk-rs = { workspace = true }
portpicker = { workspace = true }
tempfile = { workspace = true }

[[bin]]
name = "simulator"
path = "src/main.rs"
