[package]
name = "exoware-sql"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SQL engine backed by the Exoware API."
readme = "README.md"

[[bin]]
name = "sql"
path = "src/bin/sql.rs"

[dependencies]
async-trait = { workspace = true }
axum = { workspace = true }
buffa = { workspace = true }
bytes = { workspace = true }
clap = { workspace = true, features = ["derive"] }
connectrpc = { workspace = true }
exoware-sdk = { workspace = true }
datafusion = "52.2.0"
futures = "0.3.32"
hex = { workspace = true }
regex = { workspace = true }
commonware-codec = { workspace = true }
serde_json = "1"
thiserror = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true, features = ["cors"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[dev-dependencies]
criterion = { workspace = true }
exoware-simulator = { path = "../examples/simulator" }
exoware-server = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
tempfile = { workspace = true }

[[bench]]
name = "read_path_perf"
harness = false
