[package]
name = "exoware-workload"
version.workspace = true
edition.workspace = true
# This package is distributed as the repository's workload binary and GitHub Action, not a library API.
publish = false
license.workspace = true
description = "Generate and execute workloads against Exoware deployments."
readme = "README.md"
homepage.workspace = true
repository = "https://github.com/exowarexyz/monorepo/tree/main/workload"
documentation = "https://docs.rs/exoware-workload"

[dependencies]
exoware-sdk = { workspace = true }
tokio = { workspace = true, features = ["full"] }
rand = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
clap = { workspace = true, features = ["derive"] }
anyhow = { workspace = true }
hex = { workspace = true }
connectrpc = { workspace = true }
http = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = "1"

[dev-dependencies]
axum = { workspace = true }
futures = { workspace = true }

[[bin]]
name = "workload"
path = "src/main.rs"
