[package]
name = "exoware-simulator"
version.workspace = true
edition.workspace = true
publish = true
license.workspace = true
description = "Simulate the Exoware API."
readme = "README.md"
homepage.workspace = true
repository = "https://github.com/exowarexyz/monorepo/tree/main/examples/simulator"
documentation = "https://docs.rs/exoware-simulator"

[dependencies]
axum = { workspace = true }
bytes = { workspace = true }
exoware-server = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
rocksdb = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
tower-http = { workspace = true }

[dev-dependencies]
commonware-codec = { workspace = true }
connectrpc = { workspace = true }
exoware-sdk = { workspace = true }
http = { workspace = true }
tempfile = { workspace = true }

[[bin]]
name = "simulator"
path = "src/main.rs"
