[package]
name = "exoware-simulator"
version.workspace = true
edition.workspace = true
publish = true
license.workspace = true
description = "Simulate the Exoware API."
readme = "README.md"
homepage.workspace = true
repository = "https://github.com/exowarexyz/monorepo/tree/main/examples/simulator"
documentation = "https://docs.rs/exoware-simulator"

[features]
commonware-runtime-backend = ["dep:commonware-runtime", "dep:commonware-utils"]

[dependencies]
axum = { workspace = true }
bytes = { workspace = true }
commonware-codec = { workspace = true }
commonware-runtime = { workspace = true, optional = true }
commonware-utils = { workspace = true, optional = true }
exoware-sdk = { workspace = true }
exoware-server = { workspace = true }
reqwest = { workspace = true }
regex = { workspace = true }
rocksdb = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
tower-http = { workspace = true }

[dev-dependencies]
connectrpc = { workspace = true }
http = { workspace = true }
tempfile = { workspace = true }

[[bin]]
name = "simulator"
path = "src/main.rs"
