[package]
name = "exoware-qmdb-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
buffa = { workspace = true }
commonware-codec = { workspace = true }
commonware-cryptography = "2026.3.0"
commonware-storage = "2026.3.0"
connectrpc = { version = "0.3.2", default-features = false }
futures = { workspace = true }
http-body = "1"
js-sys = "0.3"
serde = { workspace = true, features = ["derive"] }
wasm-bindgen = "0.2"
