[package]
name = "exoware-qmdb-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
buffa = { workspace = true }
commonware-codec = { workspace = true }
commonware-cryptography = { git = "https://github.com/commonwarexyz/monorepo", rev = "980c293c9ede99e60e02a8c538a26f7ee0783d20" }
commonware-storage = { git = "https://github.com/commonwarexyz/monorepo", rev = "980c293c9ede99e60e02a8c538a26f7ee0783d20" }
connectrpc = { version = "0.3.2", default-features = false }
futures = { workspace = true }
http-body = "1"
js-sys = "0.3"
serde = { workspace = true, features = ["derive"] }
wasm-bindgen = "0.2"
